Made the invite url wrap correctly on small screens

--- a/billsplitter/static/css/style.css
+++ b/billsplitter/static/css/style.css
@@ -1,6 +1,8 @@
 .btn{font-weight:normal!important;}
 .hero-unit{background:url('../img/background.jpg');}
 
+.invite-url{word-wrap: break-word;}
+
 @media (max-width: 480px) {
 	h1 .pull-right{margin:10px 0;}
 	.btn{white-space: nowrap}
